# envish

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: configfile.rs  lib.rs  main.rs  profile.rs
tests/: cli.rs  configfile.rs
